--- a/index.html
+++ b/index.html
@@ -185,7 +185,27 @@
             </div>
             <!-- // Tóm tắt -->
 
-            <div class="sidebar"></div>
+            <div class="sidebar">
+                <div class="section search">
+                    <h2 class="section-title">Tìm kiếm</h2>
+                    <form action="index.html" method="post">
+                        <input type="text" name="search-term" class="text-input" placeholder="Tìm kiếm...">
+                    </form>
+                </div>
+
+                <div class="section topics">
+                    <h2 class="section-title">Danh mục</h2>
+                    <ul>
+                        <li><a href="#">Các nguy cơ và mối đe dọa</a></li>
+                        <li><a href="#">Công nghệ bảo mật</a></li>
+                        <li><a href="#">Bảo vệ dữ liệu cá nhân</a></li>
+                        <li><a href="#">An toàn ứng dụng và web</a></li>
+                        <li><a href="#">An toàn mạng và hệ thống</a></li>
+                        <li><a href="#">Bảo mật đám mây</a></li>
+                    </ul>
+                </div>
+
+            </div>
         </div>
         <!-- // Nội dung blog -->
 
