--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
 </head>
 
 <body>
+
+    <!-- Header -->
+
     <header>
         <div class="logo">
+            <img src="images/logo_kma.png" alt="" class="logo-img">
             <h1 class="logo-text"><span>KMA</span>Blog</h1>
         </div>
         <i class="fa fa-bars menu-toggle"></i>
@@ -41,6 +45,8 @@
             </li>
         </ul>
     </header>
+
+    <!-- // Header -->
 
     <!-- Page Wrapper -->
     <div class="page-wrapper">
@@ -108,7 +114,7 @@
         <!-- Nội dung blog -->
         <div class="content clearfix">
 
-            <!-- Tóm tắt -->
+            <!-- Tổng quát nội dung -->
             <div class="main-content">
                 <h1 class="recent-post-title">Mới Nhất</h1>
 
@@ -183,18 +189,17 @@
                 </div>
 
             </div>
-            <!-- // Tóm tắt -->
+            <!-- // Tổng quát nội dung -->
 
             <div class="sidebar">
                 <div class="section search">
-                    <h2 class="section-title">Tìm kiếm</h2>
                     <form action="index.html" method="post">
                         <input type="text" name="search-term" class="text-input" placeholder="Tìm kiếm...">
                     </form>
                 </div>
 
                 <div class="section topics">
-                    <h2 class="section-title">Danh mục</h2>
+                    <h2 class="section-title">Danh Mục</h2>
                     <ul>
                         <li><a href="#">Các nguy cơ và mối đe dọa</a></li>
                         <li><a href="#">Công nghệ bảo mật</a></li>
@@ -211,6 +216,35 @@
 
     </div>
     <!-- // Page Wrapper -->
+
+    <!-- Footer -->
+    <div class="footer">
+        <div class="footer-content">
+            <div class="footer-section about">
+                <img src="images/logo_kma.png" alt="" class="logo-img">
+                <h1 class="logo-text"><span>KMA</span>Blog</h1>
+                <p style="text-align:justify;">
+                    KMABlog là một trang web chuyên về tin tức an toàn thông tin, cung cấp các bài viết mới nhất về các cuộc tấn công và đánh cắp dữ liệu cũng như cách bảo vệ thông tin cá nhân, phòng chống hack và các biện pháp an ninh mạng.
+                </p>
+                <div class="contact">
+                    <span><i class="fas fa-phone">&nbsp;0965-882-072</i></span>
+                    <span><i class="fas fa-envelope">&nbsp;thangdle03@gmail.com</i></span>
+                </div>
+                <div class="socials">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            <div class="footer-section links"></div>
+            <div class="footer-section contact-form"></div>
+        </div>
+        <div class="footer-bottom">
+            &copy; KMABlog.com | Thiết kế bởi Nhóm 25
+        </div>
+    </div>
+    <!-- // Footer -->
 
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
