--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Giao diện -->
     <link rel="stylesheet" href="css/style.css">
-    <title>KMA Blog</title>
+    <title>KMABlog</title>
 </head>
 
 <body>
@@ -223,22 +223,49 @@
             <div class="footer-section about">
                 <img src="images/logo_kma.png" alt="" class="logo-img">
                 <h1 class="logo-text"><span>KMA</span>Blog</h1>
-                <p style="text-align:justify;">
+                <p>
                     KMABlog là một trang web chuyên về tin tức an toàn thông tin, cung cấp các bài viết mới nhất về các cuộc tấn công và đánh cắp dữ liệu cũng như cách bảo vệ thông tin cá nhân, phòng chống hack và các biện pháp an ninh mạng.
                 </p>
                 <div class="contact">
-                    <span><i class="fas fa-phone">&nbsp;0965-882-072</i></span>
+                    <span><i class="fas fa-phone">&nbsp;0965 882 072</i></span>
                     <span><i class="fas fa-envelope">&nbsp;thangdle03@gmail.com</i></span>
                 </div>
                 <div class="socials">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fab fa-discord"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="https://github.com/Ergnin/KMA_Blog"><i class="fab fa-github"></i></a>
                 </div>
             </div>
-            <div class="footer-section links"></div>
-            <div class="footer-section contact-form"></div>
+            <div class="footer-section links">
+                <h2>Liên kết nhanh</h2>
+                <br>
+                <ul>
+                    <a href="#">
+                        <li>Đăng xuất</li>
+                    </a>
+                    <a href="#">
+                        <li>Thư viện</li>
+                    </a>
+                    <a href="#">
+                        <li>Quản trị viên</li>
+                    </a>
+                    <a href="#">
+                        <li>Thống kê dữ liệu</li>
+                    </a>
+                </ul>
+            </div>
+            <div class="footer-section contact-form">
+                <h2>Liên hệ chúng tôi</h2>
+                <br>
+                <form action="index.html" method="post">
+                    <input type="email" name="email" class="text-input contact-input" placeholder="example@gmail.com">
+                    <textarea name="message" class="text-input contact-input message" placeholder="Tin nhắn..."></textarea>
+                    <button type="submit" class="btn btn-big contact-btn">
+                        <i class="fas fa-envelope"></i>
+                        Gửi</button>
+                </form>
+            </div>
         </div>
         <div class="footer-bottom">
             &copy; KMABlog.com | Thiết kế bởi Nhóm 25
