--- a/admin/users/create_users.html
+++ b/admin/users/create_users.html
@@ -51,7 +51,7 @@
         <!-- Sidebar Trái -->
             <div class="left-sidebar">
                 <ul>
-                    <li><a href="../index_posts.html">Quản lý bài viết</a></li>
+                    <li><a href="../posts/index_posts.html">Quản lý bài viết</a></li>
                     <li><a href="index_users.html">Quản lý người dùng</a></li>
                     <li><a href="../topics/index_topics.html">Quản lý danh mục</a></li>
                 </ul>
